GNOME Bugzilla – Bug 752638
notebook tab dragging doesn't work on Quartz (patches included to fix for gtk2+3)
Last modified: 2015-07-26 06:18:11 UTC
Created attachment 307782 [details] [review] patch for GDK-quartz DnD DnD on Quartz fails to even attempt to check whether the drop target is a known GdkWindow. Because of this, the process never generates GTK_DRAG_RESULT_NO_TARGET which prevents GtkNotebook from ever executing the code at drag end which does tab tearoff. The two simple attachments are patches that fix this problem. The patches were generated in GTK+2 code, but they will apply cleanly to GTK+3 also. If necessary, I will generate new versions of both patches for GTK+3.
Created attachment 307783 [details] [review] patch for GTK-quartz DnD
Patches look good to me; if you could turn them into git-formatted patches with commit messages, that would be great.
Review of attachment 307782 [details] [review]: please add a commit message, and commit
Review of attachment 307783 [details] [review]: please add a commit message, then it is fine to commit.